--- a/index.htm
+++ b/index.htm
@@ -79,8 +79,8 @@
 				<img src="img/iali25.jpg" tppabs="img/iali25.jpg" />
 			</div>
 			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
-				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='长辈的催婚,酷少的爱情在哪里呢？' />
-				<h3 id="text-13" contenteditable="true">长辈的催婚,酷少的爱情在哪里呢？</h3>
+				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='长辈的催婚，酷少的爱情在哪里呢？' />
+				<h3 id="text-13" contenteditable="true">长辈的催婚，酷少的爱情在哪里呢？</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
 				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
@@ -126,7 +126,7 @@
 				<img src="img/iali44.jpg" tppabs="img/iali44.jpg" />
 			</div>
 			<div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7">	
-				<h3 id="text-26" contenteditable="true">一起聊过去, 聊未来, 聊人生, 聊梦想</h3>
+				<h3 id="text-26" contenteditable="true">一起聊过去，聊未来，聊人生，聊梦想</h3>
 				<img src="img/iali32.jpg" tppabs="img/iali32.jpg" />
 			</div>
 		</div>
@@ -272,7 +272,7 @@
 			</div>
 			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
 				<img src="img/iali68.jpg" tppabs="img/iali68.jpg" alt='happy birthday' />
-				<h3 id="text-72" contenteditable="true">我爱你, 未来陪你过好每一个情人节</h3>
+				<h3 id="text-72" contenteditable="true">我爱你，未来陪你过好每一个情人节</h3>
 			</div>
 			<div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3" >
 				<div class="center-img">I love you，ChaiYin Baby</div>
