--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@
 		</div>
 		<div class="ft-section section-4" data-id="section-4">
 			<div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1">
-				<p class="text" id="text-20" contenteditable="true">酷少喜欢酷妹，非常非常的喜欢，因为酷妹的出现，酷少脸上有了更加灿烂的笑容</p>
+				<p class="text" id="text-20" contenteditable="true">相同的兴趣爱好，共同的人生经历，积极乐观的心态，让酷少迷恋这个迷人的女人</p>
 				<img src="img/iali11.jpg" tppabs="img/iali11.jpg"  />
 			</div>
 			<div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
@@ -110,49 +110,49 @@
 			</div>
 			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3">
 				<img src="img/iali59.png" tppabs="img/iali59.png" />
-				<h3 id="text-22" contenteditable="true">酷少想。。。</h3>
+				<h3 id="text-22" contenteditable="true">酷少总是在冥想</h3>
 				<img src="img/iali9.jpg" tppabs="img/iali9.jpg" />
 			</div>
 			<div id="/section-4/page-4" class="ft-page page-21" data-id="page-4">
-				<h3 id="text-23" contenteditable="true">酷少想和酷妹在一起</h3>
+				<h3 id="text-23" contenteditable="true">想要拉着酷妹的小手，紧紧的挨着</h3>
 				<img src="img/iali59.png" tppabs="img/iali59.png" />
 			</div>
 			<div id="/section-4/page-5" class="ft-page page-22 left-img" data-id="page-5">
-				<h3 id="text-24" contenteditable="true">然后酷少会经常去找酷妹</h3>
+				<h3 id="text-24" contenteditable="true">于是，酷少开始经常去找酷妹</h3>
 				<img src="img/iali4.jpg" tppabs="img/iali4.jpg" />
 			</div>
 			<div id="/section-4/page-6" class="ft-page page-23 left-img" data-id="page-6">
-				<h3 id="text-25" contenteditable="true">然后两个人一起聊天视频</h3>
+				<h3 id="text-25" contenteditable="true">两个人一起聊天，跨越了2021-2022</h3>
 				<img src="img/iali44.jpg" tppabs="img/iali44.jpg" />
 			</div>
 			<div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7">	
-				<h3 id="text-26" contenteditable="true">一起聊过去，聊未来，聊人生，聊梦想</h3>
+				<h3 id="text-26" contenteditable="true">一起总结过去，幻想未来，感叹人生，畅谈梦想</h3>
 				<img src="img/iali32.jpg" tppabs="img/iali32.jpg" />
 			</div>
 		</div>
 		<div class="ft-section section-5" data-id="section-5">
 			<div id="/section-5/page-1" class="ft-page page-25 left-img" data-id="page-1">
-				<h3><span id="text-27" contenteditable="true">直到很晚</span><br /><span id="text-28" contenteditable="true">XX再一个人回家</span></h3>
+				<h3><span id="text-27" contenteditable="true">直到很晚</span><br /><span id="text-28" contenteditable="true">想象着酷妹的模样入睡</span></h3>
 				<img src="img/iali37.jpg" tppabs="img/iali37.jpg" />
 			</div>
 			<div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
-				<h3 id="text-29" contenteditable="true">然后高兴地进入梦乡，在梦中还会和酷妹在一起</h3>
+				<h3 id="text-29" contenteditable="true">随着时间，静悄悄地进入梦乡，在梦中，他拉着酷妹的小手</h3>
 				<img src="img/iali10.gif" tppabs="img/iali10.gif" />
 			</div>
 			<div id="/section-5/page-3" class="ft-page page-27" data-id="page-3">
-				<h3 id="text-30" contenteditable="true">酷少想成为了酷妹的逛街助手</h3>
+				<h3 id="text-30" contenteditable="true">酷少想成为酷妹的逛街助手</h3>
 				<img src="img/iali67.jpg" tppabs="img/iali67.jpg"  />
 			</div>
 			<div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
-				<h3 id="text-31" contenteditable="true">然后，他们约定未来一起去远方，哪个有梦的地方</h3>
+				<h3 id="text-31" contenteditable="true">他们约定未来一起去远方，那个有梦的地方</h3>
 				<img src="img/iali40.jpg" tppabs="img/iali40.jpg" />
 			</div>
 			<div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
-				<h3 id="text-32" contenteditable="true">一起干一百件让人激动的事情</h3>
+				<h3 id="text-32" contenteditable="true">一起干一百件不一样的事情</h3>
 				<img src="img/iali12.jpg" tppabs="img/iali12.jpg" />
 			</div>
 			<div id="/section-5/page-6" class="ft-page page-30" data-id="page-6">
-				<h3 id="text-33" contenteditable="true">再然后，他们会搬到一起，相拥入眠</h3>
+				<h3 id="text-33" contenteditable="true">然后，他们会搬到一起，相拥入眠</h3>
 				<img src="img/iali76.gif" tppabs="img/iali76.gif" />
 			</div>
 			<div id="/section-5/page-7" class="ft-page page-31" data-id="page-7">
@@ -162,7 +162,7 @@
 		</div>
 		<div class="ft-section section-6" data-id="section-6">
 			<div id="/section-6/page-1" class="ft-page page-32" data-id="page-1">
-				<h3 id="text-35" contenteditable="true">买菜煮饭，成了他们每天最开心的事情</h3>
+				<h3 id="text-35" contenteditable="true">买菜做饭，成了他们每天最开心的事情</h3>
 				<img src="img/iali62.jpg" tppabs="img/iali62.jpg"  />
 			</div>
 			<div id="/section-6/page-2" class="ft-page page-33 top-text" data-id="page-2">
@@ -170,10 +170,10 @@
 				<img src="img/iali3.jpg" tppabs="img/iali3.jpg" />
 			</div>
 			<div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3">
-				<h3 id="text-37" contenteditable="true">然后在同一个站台，高高兴兴的一起上班</h3>
+				<h3 id="text-37" contenteditable="true">在同一个站台，高高兴兴的拉手上班</h3>
 			</div>
 			<div id="/section-6/page-4" class="ft-page page-35" data-id="page-4">
-				<h3><span id="text-38" contenteditable="true">酷少感觉自己好幸福。</span><br /><span id="text-39" contenteditable="true">因为自己有了家</span><br /><span id="text-40" contenteditable="true">那个有XX在的地方</span></h3>
+				<h3><span id="text-38" contenteditable="true">酷少感觉自己好幸福。</span><br /><span id="text-39" contenteditable="true">因为自己有了家</span><br /><span id="text-40" contenteditable="true">那个有酷妹在的地方</span></h3>
 				<img src="img/iali8.gif" tppabs="img/iali8.gif" />
 			</div>
 			<div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5">
@@ -204,7 +204,7 @@
 				<h3 id="text-46" contenteditable="true"> 酷少又怎会飞的更高更远</h3>
 			</div>
 			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-				<h3><span id="text-47" contenteditable="true">他们不想这样。他要为酷妹改变自己</span><br /><span id="text-48" contenteditable="true">XX不知道XX喜欢什么，但他一定会满足她的一切。</span></h3>
+				<h3><span id="text-47" contenteditable="true">他们不想这样。他要为酷妹改变自己</span><br /><span id="text-48" contenteditable="true">酷少不知道酷妹喜欢什么，但是只要酷妹喜欢，酷少会拼尽全力。</span></h3>
 				<img src="img/iali69.jpg" tppabs="img/iali69.jpg"  />
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
@@ -233,7 +233,7 @@
 			<div id="/section-8/page-2" class="ft-page page-47 top-text" data-id="page-2">
 				<img src="img/iali58.jpg" tppabs="img/iali58.jpg" />
 				<h3>
-					<span id="text-58" contenteditable="true">想想未来他们</span>
+					<span id="text-58" contenteditable="true">想想未来的他们</span>
                     <span id="text-59" contenteditable="true">会有一辈子</span>
 					<span id="text-59" contenteditable="true">酷少好开心</span>
 					<span id="text-60" contenteditable="true">他可以和酷妹一起</span>
@@ -272,17 +272,18 @@
 			</div>
 			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
 				<img src="img/iali68.jpg" tppabs="img/iali68.jpg" alt='happy birthday' />
-				<h3 id="text-72" contenteditable="true">我爱你，未来陪你过好每一个情人节</h3>
+				<h3 id="text-72" contenteditable="true">我爱你，愿意陪你过以后的每一个情人节</h3>
 			</div>
 			<div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3" >
-				<div class="center-img">I love you，ChaiYin Baby</div>
+				<div class="center-img">I love you</div>
 			</div>
 			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
 				<img src="img/14915.jpg" tppabs="img/14915.jpg" />
 				<p class="text">
 					<span id="text-73" contenteditable="true">我相信，酷少和酷妹的故事会一直继续下去。</span><br />
 					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br />
-                    <span id="text-74" contenteditable="true">柴莹宝宝，我爱你，第一个情人节快乐</span><br />
+                    <span id="text-74" contenteditable="true">柴莹宝宝</span><br />
+					<span id="text-74" contenteditable="true">第一个情人节快乐哦！！！爱你的海总！哈哈哈</span><br />
 					<br />
 					<br />
 					<span> -- 按“Esc"键有惊喜</span>
