--- a/index.htm
+++ b/index.htm
@@ -293,8 +293,10 @@
 	</div>
 	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
 	
-
-	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
+	<audio  autoplay="autoplay" loop  id="music">
+		<source src="lovebgm.mp3" audio="" >
+	</audio>
+	
 
 	
 	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
