--- a/index.htm
+++ b/index.htm
@@ -293,11 +293,7 @@
 	</div>
 	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
 	
-	<audio  autoplay="autoplay" loop  id="music">
-		<source src="lovebgm.mp3" audio="" >
-	</audio>
-	
-
+	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop="loop" preload="auto" type="audio/mp3"></audio>
 	
 	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 	<script src="all.min.js" ></script>
