--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,7 @@
 				<img src="img/iali5.jpg" tppabs="img/iali5.jpg" />
 			</div>
 			<div id="/section-2/page-6" class="ft-page page-10" data-id="page-6">
-				<h3 id="text-9" contenteditable="true">并且面带阳光、自信的笑容</h3>
+				<h3 id="text-9" contenteditable="true">并且面带阳光、自信且笑容</h3>
 				<img src="img/iali22.jpg" tppabs="img/iali22.jpg" />
 			</div>
 		</div>
